[gd_scene load_steps=13 format=3 uid="uid://dh1qua8a666tc"]

[ext_resource type="Script" path="res://Scripts/Enemies/enemy_a.gd" id="1_ojeul"]
[ext_resource type="Texture2D" uid="uid://dl6a82ayusl4a" path="res://Assets/Characters/enemy.png" id="2_0vbbm"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ew64w"]
size = Vector3(0.579956, 0.776672, 0.151779)

[sub_resource type="Animation" id="Animation_6hxkx"]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 2, 3, 2]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [8],
"method": &"enemy_attack"
}, {
"args": [8],
"method": &"enemy_attack"
}]
}

[sub_resource type="Animation" id="Animation_v1fhm"]
resource_name = "Down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 10]
}

[sub_resource type="Animation" id="Animation_o5n8m"]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_4gahj"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_3a5rk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_e73fs"]
resource_name = "Up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [10, 9, 0]
}

[sub_resource type="Animation" id="Animation_ecg14"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wvd2j"]
_data = {
"Attack": SubResource("Animation_6hxkx"),
"Down": SubResource("Animation_v1fhm"),
"Hurt": SubResource("Animation_o5n8m"),
"Idle": SubResource("Animation_4gahj"),
"RESET": SubResource("Animation_3a5rk"),
"Up": SubResource("Animation_e73fs"),
"Walk": SubResource("Animation_ecg14")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_xu0pv"]
radius = 2.36237

[node name="EnemyA" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
up_direction = Vector3(0, 0, 1)
script = ExtResource("1_ojeul")
speed_default = 0.4

[node name="Sprite3D" type="Sprite3D" parent="."]
texture_filter = 2
texture = ExtResource("2_0vbbm")
hframes = 3
vframes = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0463257, 0.00827017, 0.0129774)
shape = SubResource("BoxShape3D_ew64w")

[node name="TakeDamageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Attack" type="Marker3D" parent="."]

[node name="Spawn" type="Marker3D" parent="Attack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.313247, 0.219024, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wvd2j")
}
autoplay = "Idle"

[node name="Detection" type="Area3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Detection"]
shape = SubResource("SphereShape3D_xu0pv")

[connection signal="timeout" from="TakeDamageTimer" to="." method="_on_take_damage_timer_timeout"]
[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_detection_body_exited"]
